# neozeus

./: .gitignore  Cargo.toml  PROJECT_RULES.md  README.md  STYLE_GUIDE.md  install  install.sh  neozeus.toml
.cargo/: config.toml
assets/shaders/: hud_agent_list_analog.wgsl  hud_agent_list_bloom.wgsl  hud_agent_list_bloom_blur.wgsl  hud_agent_list_bloom_composite.wgsl  hud_composite.wgsl
poc/bevy_alacritty_terminal/: Cargo.toml
poc/bevy_shadow_terminal/: Cargo.toml
poc/bevy_terminal_shared/: Cargo.toml
poc/xterm_web/: Cargo.toml
prompts/: APPEND_SYSTEM.md
scripts/: inspect-agent-list-bloom-stages.sh  install-neozeus-msg  run-agent-list-bloom-debug.sh  test-install.sh  usage_fetch.py  verify-agent-list-bloom.sh  verify-hud-workflow.sh  verify-terminal-colors.sh  verify-visible-terminal.sh
scripts/gui/: inspect-agent-list-bloom-stages.sh  neozeus-safe.sh  run-agent-list-bloom-debug.sh  run-suite.sh  verify-agent-list-bloom.sh  verify-hud-orange.sh  verify-hud-workflow.sh  verify-terminal-colors.sh  verify-visible-terminal.sh
scripts/offscreen/: clone-current-state.sh  common.sh  run-scenario.sh  run-suite.sh  verify-agent-context-bloom.sh  verify-agent-list-bloom.sh  (+5 more)
src/: aegis.rs  agents.rs  app_config.rs  clone_state.rs  composer.rs  conversations.rs  dialogs.rs  hud.rs  input.rs  lib.rs  main.rs  scene.rs  startup.rs  terminals.rs  tests.rs  text_selection.rs  verification.rs  visual_contract.rs
tests/: agent_context_bloom_layering.rs  bloom_surface_isolation.rs  visual_support.rs
work/: ARCH-20260325-refactor-invariants.md  CONTRACT-WORKING-VISUALS-20260406.md  PLAN-20260314-173755.md  PLAN-20260315-100800.md  PLAN-20260315-150053.md  PLAN-20260316-123319.md  PLAN-20260322-terminal-daemon-high-fidelity.md  PLAN-20260327-152538.md  PLAN-20260328-complete-architecture-migration.md  TODO-20260315-152813.md  TODO-20260316-125454.md  TODO-20260322-terminal-daemon-high-fidelity.md  TODO-20260325-191139-architecture-review-followups.md  TODO-20260328-163233-complete-architecture-migration.md  TODO-20260410-223216.md  TODO-style-guide-compliance.md
(+273 files in other folders)
