[package]
name = "neozeus"
version = "0.1.0"
edition = "2021"
default-run = "neozeus"
license = "MIT OR Apache-2.0"

[dependencies]
alacritty_terminal = "0.25.1"
bevy = { version = "0.18.1", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_image",
    "bevy_log",
    "bevy_render",
    "bevy_shader",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_window",
    "bevy_winit",
    "multi_threaded",
    "png",
    "std",
    "wayland",
    "x11",
] }
bevy_egui = { version = "0.39.1", default-features = false, features = ["manage_clipboard"] }
bevy_vello = { version = "0.13.1", features = ["text", "default_font"] }
cosmic-text = "0.16.0"
portable-pty = "0.9.0"

